<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:importantForAutofill="no"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_large">

        <TextView
            style="@style/Settings.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_authentication_header" />

        <LinearLayout
            android:id="@+id/settings_auth_responses_container"
            style="@style/Settings.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/settings_auth_responses_label"
                style="@style/Settings.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_authenticate_responses" />

            <Switch
                android:id="@+id/settings_auth_responses_switch"
                style="@style/Settings.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_normal"
                android:minHeight="@dimen/a11y_min_touch_target_dimen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_auth_datasets_container"
            style="@style/Settings.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/settings_auth_datasets_label"
                style="@style/Settings.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_authenticate_datasets" />

            <Switch
                android:id="@+id/settings_auth_datasets_switch"
                style="@style/Settings.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_normal"
                android:minHeight="@dimen/a11y_min_touch_target_dimen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_auth_credentials_container"
            style="@style/Settings.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/settings_auth_credentials_label"
                style="@style/Settings.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Update Password" />

            <ImageView
                android:id="@+id/settings_auth_credentials_icon"
                style="@style/Settings.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_normal"
                android:minHeight="@dimen/a11y_min_touch_target_dimen"
                android:src="@drawable/ic_person_black_24dp" />
        </LinearLayout>

        <TextView
            style="@style/Settings.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_data_header" />


        <LinearLayout
            android:id="@+id/settings_clear_data_container"
            style="@style/Settings.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/settings_clear_data_label"
                style="@style/Settings.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_clear_data_label" />

            <ImageView
                android:id="@+id/settings_clear_data_icon"
                style="@style/Settings.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_normal"
                android:minHeight="@dimen/a11y_min_touch_target_dimen"
                android:src="@drawable/ic_delete_forever_black_24dp" />
        </LinearLayout>

        <TextView
            style="@style/Settings.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_dal_header" />

        <RadioGroup
            android:id="@+id/dalCheckRequirementContainer"
            style="@style/Settings.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/dalDisabled"
                style="@style/Settings.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/a11y_min_touch_target_dimen"
                android:text="@string/settings_dal_disabled" />

            <RadioButton
                android:id="@+id/dalLoginOnly"
                style="@style/Settings.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/a11y_min_touch_target_dimen"
                android:text="@string/settings_dal_login_only" />

            <RadioButton
                android:id="@+id/dalAllUrls"
                style="@style/Settings.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/a11y_min_touch_target_dimen"
                android:text="@string/settings_dal_all_urls" />
        </RadioGroup>




        <TextView
            style="@style/Settings.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_enable_header" />

        <LinearLayout
            android:id="@+id/settingsSetServiceContainer"
            style="@style/Settings.Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/settingsSetServiceLabel"
                style="@style/Settings.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_set_service" />

            <Switch
                android:id="@+id/settingsSetServiceSwitch"
                style="@style/Settings.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_normal"
                android:minHeight="@dimen/a11y_min_touch_target_dimen" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
